// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupCardItem renders for global community 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "elevation": 4,
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="CardButton"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 4,
          "height": 403.875,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "testUri": "../../../assets/images/globalCommunityImage.png",
        }
      }
      style={
        Object {
          "borderRadius": 4,
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.6)",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "bottom": 0,
            "left": 0,
            "padding": 13,
            "position": "absolute",
            "right": 0,
          },
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
        >
          GROUP NAME
        </Text>
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 12,
            }
          }
        >
          0 Members
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`GroupCardItem renders for join screen 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "elevation": 4,
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="CardButton"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 4,
          "height": 403.875,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={Object {}}
      style={
        Object {
          "borderRadius": 4,
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.6)",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "bottom": 0,
            "left": 0,
            "padding": 13,
            "position": "absolute",
            "right": 0,
          },
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
        >
          GROUP NAME
        </Text>
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 12,
            }
          }
        >
          Roge E (Owner)
        </Text>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="JoinButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Array [
                  Object {
                    "backgroundColor": "#FF5532",
                    "borderRadius": 12,
                    "margin": 5,
                    "paddingHorizontal": 20,
                    "paddingVertical": 5,
                  },
                ],
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "letterSpacing": 1,
                    "lineHeight": 18,
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                  },
                ]
              }
            >
              JOIN
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GroupCardItem renders for join screen no owner 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "elevation": 4,
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="CardButton"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 4,
          "height": 403.875,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={Object {}}
      style={
        Object {
          "borderRadius": 4,
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.6)",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "bottom": 0,
            "left": 0,
            "padding": 13,
            "position": "absolute",
            "right": 0,
          },
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
        >
          GROUP NAME
        </Text>
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 12,
            }
          }
        >
          Private Group
        </Text>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "flexDirection": "column",
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="JoinButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Array [
                  Object {
                    "backgroundColor": "#FF5532",
                    "borderRadius": 12,
                    "margin": 5,
                    "paddingHorizontal": 20,
                    "paddingVertical": 5,
                  },
                ],
                null,
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "letterSpacing": 1,
                    "lineHeight": 18,
                    "textAlign": "center",
                    "textTransform": "uppercase",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                  },
                ]
              }
            >
              JOIN
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GroupCardItem renders group 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "elevation": 4,
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="CardButton"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 4,
          "height": 403.875,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={Object {}}
      style={
        Object {
          "borderRadius": 4,
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.6)",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "bottom": 0,
            "left": 0,
            "padding": 13,
            "position": "absolute",
            "right": 0,
          },
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
        >
          GROUP NAME
        </Text>
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 12,
            }
          }
        >
          0 Members
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`GroupCardItem renders group with member count 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "elevation": 4,
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="CardButton"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 4,
          "height": 403.875,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={Object {}}
      style={
        Object {
          "borderRadius": 4,
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.6)",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "bottom": 0,
            "left": 0,
            "padding": 13,
            "position": "absolute",
            "right": 0,
          },
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
        >
          GROUP NAME
        </Text>
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 12,
            }
          }
        >
          5 Members
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`GroupCardItem renders group with singular member count 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "elevation": 4,
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="CardButton"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 4,
          "height": 403.875,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={Object {}}
      style={
        Object {
          "borderRadius": 4,
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.6)",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "bottom": 0,
            "left": 0,
            "padding": 13,
            "position": "absolute",
            "right": 0,
          },
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
        >
          GROUP NAME
        </Text>
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 12,
            }
          }
        >
          1 Member
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`GroupCardItem renders with image url 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "elevation": 4,
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="CardButton"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 4,
          "height": 403.875,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "uri": "https://vignette.wikia.nocookie.net/edain-mod/images/6/6e/Mordor_Submod_Banner.jpg",
        }
      }
      style={
        Object {
          "borderRadius": 4,
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.6)",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "bottom": 0,
            "left": 0,
            "padding": 13,
            "position": "absolute",
            "right": 0,
          },
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
        >
          GROUP NAME
        </Text>
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 12,
            }
          }
        >
          0 Members
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`GroupCardItem renders with no report counts 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "elevation": 4,
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="CardButton"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 4,
          "height": 403.875,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={Object {}}
      style={
        Object {
          "borderRadius": 4,
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.6)",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "bottom": 0,
            "left": 0,
            "padding": 13,
            "position": "absolute",
            "right": 0,
          },
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
        >
          GROUP NAME
        </Text>
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 12,
            }
          }
        >
          0 Members
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`GroupCardItem renders with no report counts 2`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "elevation": 4,
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="CardButton"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 4,
          "height": 403.875,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={Object {}}
      style={
        Object {
          "borderRadius": 4,
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.6)",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "bottom": 0,
            "left": 0,
            "padding": 13,
            "position": "absolute",
            "right": 0,
          },
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
        >
          GROUP NAME
        </Text>
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 12,
            }
          }
        >
          0 Members
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`GroupCardItem renders with notification 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "elevation": 4,
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 8,
      "opacity": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="CardButton"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#005A7F",
          "borderRadius": 4,
          "height": 403.875,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Image
      resizeMode="cover"
      source={Object {}}
      style={
        Object {
          "borderRadius": 4,
          "height": "100%",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.6)",
            "borderBottomLeftRadius": 4,
            "borderBottomRightRadius": 4,
            "bottom": 0,
            "left": 0,
            "padding": 13,
            "position": "absolute",
            "right": 0,
          },
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
        >
          GROUP NAME
        </Text>
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontSize": 12,
            }
          }
        >
          0 Members
        </Text>
      </View>
    </View>
  </View>
</View>
`;
